<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">TaskManager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_success">Successfully!</string>
    <string name="swipe_item_list_edit">Edit</string>
    <string name="swipe_item_list_delete">Delete</string>

    <string name="expandable_fragment_title">Expandable</string>

    <string name="swipe_recycler_view_adapter_delete">Deleted</string>
    <string name="swipe_recycler_view_adapter_edit">Ed</string>
    <string name="swipe_recycler_view_adapter_click"> onClick : </string>
    <string name="vertical_fragment_title_dialog_delete">Delete item</string>
    <string name="vertical_fragment_question_delete">Are you sure you want to delete this item?</string>
</resources>
