<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="jyun0.taskmanager.LoginActivity">

    <ImageView
        android:layout_marginTop="-100dp"
        android:src="@drawable/account"
        android:layout_width="180dp"
        android:layout_height="180dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:hint="@string/email_hint"
            android:ems="10"/>
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/password_edit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password_hint">
        </EditText>
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/key_icon" />
    </LinearLayout>

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up_button_label"/>

</LinearLayout>